Fixed sorting of messages and truncating message previews

--- a/src/inbox/inbox.css
+++ b/src/inbox/inbox.css
@@ -18,6 +18,10 @@
     font-style: normal;
 }
 
+.message-preview {
+    color: gray;
+}
+
 #delete-button {
     width: fit-content;
 }
